Kubernetes/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
  - host: keycloak.test.uz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-headless
            port:
              number: 80
  tls:
  - hosts:
    - keycloak.test.uz
    secretName: keycloak-tls
